# docs/swagger.yaml
@@ -31,6 +31,9 @@ definitions:
         items:
           $ref: '#/definitions/domain.SalesItemRequest'
         type: array
+      location:
+        example: Toko Utama
+        type: string
       member_name:
         example: Desak
         type: string
@@ -230,8 +233,10 @@ definitions:
         type: string
       is_dp:
         type: boolean
+      location:
+        description: Toko Utama, Toko Sudirman, Toko Paye
+        type: string
       member_name:
-        description: Dari field 'Member' di gambar
         type: string
       payment_method:
         type: string
@@ -281,7 +286,6 @@ definitions:
       deleted_at:
         type: string
       discount:
-        description: Potongan harga
         type: number
       h_beli:
         type: number
@@ -293,8 +297,9 @@ definitions:
         type: string
       is_dp:
         type: boolean
+      location:
+        type: string
       member_name:
-        description: Dari field 'Member' di gambar
         type: string
       payment_method:
         type: string
@@ -307,9 +312,10 @@ definitions:
       status:
         type: string
       total_netto:
-        description: Harga setelah diskon
         type: number
       updated_at:
+        type: string
+      user_id:
         type: string
     type: object
   domain.SalesTransactionGroup:
@@ -332,6 +338,8 @@ definitions:
         items:
           $ref: '#/definitions/domain.Sales'
         type: array
+      location:
+        type: string
       member_name:
         type: string
       payment_method:
